[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["leo-guinan <leo@copy.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2"
dj-rest-auth = {extras = ["with_social"], version = "^2.2.4"}
tweepy = "^4.10.0"
python-decouple = "^3.6"
django-cors-headers = "^3.12.0"
djangorestframework-simplejwt = "^5.1.0"
djangorestframework-api-key = "2.*"
celery = "^5.2.6"
django-celery-results = "^2.3.1"
django-celery-beat = "^2.2.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
flower = "^1.0.0"
redis = "^4.3.1"
whitenoise = {extras = ["brotli"], version = "^6.1.0"}
Pillow = "^9.2.0"
stripe = "^3.5.0"
sendgrid = "^6.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
