[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["leo-guinan <leo@copy.ai>"]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^3.2"
dj-rest-auth = {extras = ["with_social"], version = "^2.2.4"}
tweepy = "^4.10.1"
python-decouple = "^3.6"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.1"
djangorestframework-api-key = "2.*"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
django-celery-beat = "^2.3.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
flower = "^1.2.0"
redis = "^4.3.4"
whitenoise = {extras = ["brotli"], version = "^6.1.0"}
Pillow = "^9.2.0"
stripe = "^4.2.0"
sendgrid = "^6.9.7"
feedparser = "^6.0.10"
setuptools = "^65.4.1"
importlib-metadata = "^5.0.0"
typing-extensions = "^4.3.0"
cached-property = "^1.5.2"
python-dateutil = "^2.8.2"
pandas = "^1.5.1"
openai = "^0.25.0"
tokenizers = "^0.13.2"
langchain = {extras = ["all"], version = "^0.0.38"}
numpy = "^1.24.1"
scikit-learn = "^1.2.0"
pinecone-client = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.2.1", "setuptools"]
build-backend = "poetry.core.masonry.api"
